@@ -344,6 +344,8 @@ void MovieData::truncateAt(int frame)
 void MovieData::installValue(std::string& key, std::string& val)
 {
 	//todo - use another config system, or drive this from a little data structure. because this is gross
+	if(key == "FDS")
+		installInt(val,fds);
 	if(key == "version")
 		installInt(val,version);
 	else if(key == "emuVersion")
@@ -402,6 +404,7 @@ int MovieData::dump(std::ostream *os, bool binary)
 	*os << "port0 " << ports[0] << endl;
 	*os << "port1 " << ports[1] << endl;
 	*os << "port2 " << ports[2] << endl;
+	*os << "FDS " << isFDS << endl;
 
 	for(uint32 i=0;i<comments.size();i++)
 		*os << "comment " << wcstombs(comments[i]) << endl;
